--- a/resource.qrc
+++ b/resource.qrc
@@ -14,5 +14,6 @@
         <file>4096.png</file>
         <file>8192.png</file>
         <file>0.png</file>
+        <file>images.jpg</file>
     </qresource>
 </RCC>
