--- a/resource.qrc
+++ b/resource.qrc
@@ -15,5 +15,6 @@
         <file>8192.png</file>
         <file>0.png</file>
         <file>images.jpg</file>
+        <file>sure.gif</file>
     </qresource>
 </RCC>
