--- a/closesure.ui
+++ b/closesure.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>maingame</class>
- <widget class="QDialog" name="maingame">
+ <class>closesure</class>
+ <widget class="QDialog" name="closesure">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>650</height>
+    <width>350</width>
+    <height>200</height>
    </rect>
   </property>
   <property name="windowTitle">
