--- a/resource.qrc
+++ b/resource.qrc
@@ -20,5 +20,7 @@
         <file>mode.JPG</file>
         <file>magicstone.png</file>
         <file>mode2.png</file>
+        <file>panick.png</file>
+        <file>start.png</file>
     </qresource>
 </RCC>
